--- a/Centrifuge/packages.config
+++ b/Centrifuge/packages.config
@@ -4,5 +4,9 @@
   <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.3" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Channels" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Websocket.Client" version="4.6.1" targetFramework="net48" />
 </packages>
