--- a/Centrifuge/Centrifuge.csproj
+++ b/Centrifuge/Centrifuge.csproj
@@ -4,14 +4,13 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{436DF436-57DF-4CA3-B72F-C0C8F0BE968D}</ProjectGuid>
-        <OutputType>Exe</OutputType>
+        <ProjectGuid>{177CEA0E-CA22-4370-85C5-0150100F6482}</ProjectGuid>
+        <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Centrifuge</RootNamespace>
         <AssemblyName>Centrifuge</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,8 +32,8 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Google.Protobuf, Version=3.23.2.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
-          <HintPath>packages\Google.Protobuf.3.23.2\lib\net45\Google.Protobuf.dll</HintPath>
+        <Reference Include="Google.Protobuf, Version=3.23.3.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
+          <HintPath>packages\Google.Protobuf.3.23.3\lib\net45\Google.Protobuf.dll</HintPath>
         </Reference>
         <Reference Include="mscorlib" />
         <Reference Include="System" />
@@ -71,7 +70,6 @@
         <Reference Include="WindowsBase" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="src\Backoff.cs" />
         <Compile Include="src\Client.cs" />
