--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -34,7 +34,7 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Centrifuge">
-          <HintPath>..\..\Centrifuge\bin\Release\Centrifuge.dll</HintPath>
+          <HintPath>..\Centrifuge\bin\Release\Centrifuge.dll</HintPath>
         </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
